# godot-discord-game-sdk

./: .gitattributes  .gitignore  CMakeLists.txt  dev.sh  readme.md
.github/workflows/: build.yml
addons/discord_game_sdk/: discord.gd  discord_activity_timestamps.gdns  discord_lobby_manager.gdns  discord_overlay_manager.gdns  discord_party_size.gdns  discord_sdk.gdnlib  plugin.gd  readme.md  settings.gd  settings.tres  steam.tscn
addons/discord_game_sdk/example/: lobby.tscn
addons/discord_game_sdk/example/rich_presence/: rich_presence.gd
addons/discord_game_sdk/examples/: example.gd  example.tscn
addons/discord_sdk/: discord.gd  discord_activity.gdns  discord_activity_assets.gdns  discord_activity_manager.gdns  discord_activity_party.gdns  discord_activity_secrets.gdns  discord_core.gdns  discord_lobby.gdns  discord_lobby_transaction.gdns  discord_result.gdns  discord_sdk.gdnlib  discord_user.gdns
addons/discord_sdk/examples/: example.gd  example.tscn
app/: canvas_container.gd  export_presets.cfg  game.gd  lobby.tscn  project.godot  readme.md
app/export/: game.pck
ci/: package.bash
lib/discord-sdk/cpp/: lobby_manager.cpp  lobby_manager.h
lib/godot-cpp/: conandata.yml  conanfile.py
src/: Godot.cpp
